--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -26,7 +26,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
                          <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="SodaMachine" asp-action="Index">Sodas</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="SodaMachine" asp-action="ShowSodas">Sodas</a>
                         </li>
                     </ul>
                 </div>
