--- a/Views/SodaMachine/ShowSodas.cshtml
+++ b/Views/SodaMachine/ShowSodas.cshtml
@@ -3,6 +3,25 @@
     ViewData["Title"] = "Index";
 }
 
+@using (Html.BeginForm("PayForSodas", "SodaMachine", FormMethod.Post, new { enctype ="multipart/form-data" }))
+{
+    @Html.AntiForgeryToken()
+    <h1>Type in the name and amount of cans of the soda of your choice</h1>
+    <div class="form-horizontal">
+        <div class="form-group">
+            @Html.LabelFor(model => model.FirstOrDefault().Name)
+            @Html.TextBoxFor(model => model.FirstOrDefault().Name, new { @class = "form-control", @Value = "" })
+            @Html.ValidationMessageFor(model => model.FirstOrDefault().Name, "", new { @class="text-danger" })
+        </div>
+        <div class="form-group">
+            @Html.LabelFor(model => model.FirstOrDefault().CansAvailable)
+            @Html.TextBoxFor(model => model.FirstOrDefault().CansAvailable, new { @placeholder = "Please, type in the soda's name",@class = "form-control" })
+            @Html.ValidationMessageFor(model => model.FirstOrDefault().CansAvailable, "", new { @class="text-danger" })
+        </div>
+
+        <input type="submit" class="btn btn-success" value="Crear" />
+    </div>
+}
 <h1>This is a h1 Title</h1>
 <h1> This is the viewbag title @ViewBag.MainTitle</h1>
 <div>
@@ -22,7 +41,7 @@
                     <td>@(index+1)</td>
                     <td>@Model.ElementAtOrDefault(index).Name</td>
                     <td>@Model.ElementAtOrDefault(index).CansAvailable</td>
-                    <td>@Model.ElementAtOrDefault(index).Currency.CurrencySymbol @Model.ElementAtOrDefault(index).PriceOfCan</td>
+                    <td>@Model.ElementAtOrDefault(index).Currency @Model.ElementAtOrDefault(index).PriceOfCan</td>
                 </tr>
             }
         </tbody>
