--- a/Views/SodaMachine/PayForSodas.cshtml
+++ b/Views/SodaMachine/PayForSodas.cshtml
@@ -3,7 +3,7 @@
 @*
     For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
 *@
-@using (Html.BeginForm("PayForSodas", "SodaMachine", FormMethod.Post, new { enctype ="multipart/form-data" }))
+@using (Html.BeginForm("PlaceOrder", "SodaMachine", FormMethod.Post, new { enctype ="multipart/form-data" }))
 {
     @Html.AntiForgeryToken()
     <h1>Type in the name and amount of cans of the soda of your choice</h1>
