--- a/Views/SodaMachine/ShowSodas.cshtml
+++ b/Views/SodaMachine/ShowSodas.cshtml
@@ -14,8 +14,8 @@
 
 </head>
 <body>
-    <h1>This is a h1 Title</h1>
-    <h1> This is the viewbag title @ViewBag.MainTitle</h1>
+    <h1>Welcome to the vending machine!</h1>
+    <h3> These are the currently available sodas</h3>
     <div>
         <table class=" table">
             <thead>
@@ -30,7 +30,7 @@
                 @for(int index = 0; index < Model.SodaList.Count; index++)
                 {
                     <tr>
-                        <td>@ViewBag.Message</td>
+                        <td>@(index+1)</td>
                         <td>@Model.SodaList.ElementAtOrDefault(index).Name</td>
                         <td>@Model.SodaList.ElementAtOrDefault(index).CansAvailable</td>
                         <td>@Model.SodaList.ElementAtOrDefault(index).Currency @Model.SodaList.ElementAtOrDefault(index).PriceOfCan</td>
@@ -40,14 +40,14 @@
         </table>
     </div>
 
-    @using (Html.BeginForm("PayForSodas", "SodaMachine", FormMethod.Post, new { enctype ="multipart/form-data" }))
+    @using (Html.BeginForm("PlaceOrder", "SodaMachine", FormMethod.Post, new { enctype ="multipart/form-data" }))
     {
         @Html.AntiForgeryToken()
-        <h1>Type in the name and amount of cans of the soda of your choice</h1>
+        <h4>Type in the name and amount of cans of the soda of your choice</h4>
         <div class="form-horizontal">
             <div class="form-group">
                 @Html.LabelFor(model => model.ASoda.Name)
-                @Html.TextBoxFor(model => model.ASoda.Name, new { @class = "form-control", @Value = "" })
+                @Html.TextBoxFor(model => model.ASoda.Name, new { @placeholder = "Please, type in the soda's name, Ex: Coca Cola",@class = "form-control", @Value = "" })
                 @Html.ValidationMessageFor(model => model.ASoda.Name, "", new { @class="text-danger" })
             </div>
             <div class="form-group">
@@ -56,7 +56,7 @@
                 @Html.ValidationMessageFor(model => model.ASoda.CansAvailable, "", new { @class="text-danger" })
             <br>
             </div>
-                <input type="submit" class="btn btn-success" value="Crear" />
+                <input type="submit" class="btn btn-success" value="Buy" />
             </div>
     }
     @if (ViewBag.Message != null)  
@@ -68,8 +68,6 @@
         </script>  
     } 
     
-
-        <p> @ViewBag.Message</p>
     
 
 </body>
